feat: add github actions for staging

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "staging": "rs-school-feed-stage",
-    "production": "rs-school-feed"
+    "production": "rs-school-feed",
+    "default": "rs-school-feed-stage"
   }
 }
