--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,34 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumError": "5kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "staging": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "5kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stage.ts"
                 }
               ],
               "outputHashing": "all"
@@ -66,6 +93,9 @@
           "configurations": {
             "production": {
               "browserTarget": "RSS-Feed:build:production"
+            },
+            "staging": {
+              "browserTarget": "RSS-Feed:build:staging"
             },
             "development": {
               "browserTarget": "RSS-Feed:build:development"
