--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start:dev": "concurrently 'npm run build:watch --prefix ./functions' 'npm start'",
+    "build:stage": "ng build --configuration staging",
+    "build:prod": "ng build --configuration production",
+    "build:functions": "npm install --prefix ./functions && npm run build --prefix ./functions",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -27,12 +30,14 @@
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "concurrently": "^7.6.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.8.3",
     "typescript": "~4.8.2"
   }
 }
