--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
     "staging": "rs-school-feed-stage",
-    "production": "rs-school-feed",
-    "default": "rs-school-feed-stage"
+    "production": "rs-school-feed"
   }
 }
